--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
      initial-scale=1.0"
     />
     <title>Web Studio</title>
+    <h2 class="section-title">Our Team</h2>
+    <h2 class="section-title">Our Portfolio</h2>
 
     <link
       rel="stylesheet"
@@ -35,7 +37,7 @@
         >
         <ul class="nav-list">
           <li class="nav-iten">
-            <a class="nav-link" href="./index.html">Studio</a>
+            <a class="nav-link" href="#">Studio</a>
           </li>
           <li class="nav-iten"><a class="nav-link" href="">Portfolio</a></li>
           <li class="nav-iten"><a class="nav-link" href="">Contacts</a></li>
@@ -61,9 +63,11 @@
     <!-- Main -->
     <main>
       <!--Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <div class="hero__content">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn">Order Service</button>
+        </div>
       </section>
 
       <!-- Features -->
@@ -107,15 +111,16 @@
       </section>
 
       <!--Team -->
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team__list">
+          <li class="team__card">
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+
+          <li class="team__card">
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -134,13 +139,78 @@
       </section>
     </main>
 
+    <!--Portfolio-->
+    <section class="portfolio">
+      <h2>Our Portfolio</h2>
+
+      <ul class="portfolio__list">
+        <li class="portfolio__card">
+          <img src="./images/portfolio-1.jpg" width="360" alt="Banking App" />
+          <h3>Banking App</h3>
+          <p>App</p>
+        </li>
+
+        <li class="portfolio__card">
+          <img
+            src="./images/portfolio-2.jpg"
+            width="360"
+            alt="Cashless Payment"
+          />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li class="portfolio__card">
+          <img
+            src="./images/portfolio-3.jpg"
+            width="360"
+            alt="Meditation App"
+          />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+
+        <li class="portfolio__card">
+          <img src="./images/portfolio-4.jpg" width="360" alt="Taxi Service" />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li class="portfolio__card">
+          <img
+            src="./images/portfolio-5.jpg"
+            width="360"
+            alt="Screen Illustrations"
+          />
+          <h3>Screen Illustrations</h3>
+          <p>Desing</p>
+        </li>
+
+        <li class="portfolio__card">
+          <img
+            src="./images/portfolio-6.jpg"
+            width="360"
+            alt="Online Courses"
+          />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+      </ul>
+    </section>
+
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
+      <div class="footer__container">
+        <a href="#" class="logo footer-logo">
+          <span class="logo-web"> WEB</span>
+          <span class="logo-studio">STUDIO</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
       <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
     </footer>
   </body>
 </html>
