--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
      initial-scale=1.0"
     />
     <title>Web Studio</title>
-    <h2 class="section-title">Our Team</h2>
-    <h2 class="section-title">Our Portfolio</h2>
 
     <link
       rel="stylesheet"
@@ -64,9 +62,9 @@
     <main>
       <!--Hero section -->
       <section class="hero">
-        <div class="hero__content">
+        <div class="hero-content">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-btn">Order Service</button>
+          <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
 
@@ -112,15 +110,15 @@
 
       <!--Team -->
       <section class="team">
-        <h2>Our Team</h2>
-        <ul class="team__list">
-          <li class="team__card">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-card">
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
-          <li class="team__card">
+          <li class="team-card">
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -137,80 +135,81 @@
           </li>
         </ul>
       </section>
+
+      <!--Portfolio-->
+      <section class="portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-card">
+            <img src="./images/portfolio-1.jpg" width="360" alt="Banking App" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              src="./images/portfolio-2.jpg"
+              width="360"
+              alt="Cashless Payment"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              src="./images/portfolio-3.jpg"
+              width="360"
+              alt="Meditation App"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              src="./images/portfolio-4.jpg"
+              width="360"
+              alt="Taxi Service"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              src="./images/portfolio-5.jpg"
+              width="360"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              src="./images/portfolio-6.jpg"
+              width="360"
+              alt="Online Courses"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-
-    <!--Portfolio-->
-    <section class="portfolio">
-      <h2>Our Portfolio</h2>
-
-      <ul class="portfolio__list">
-        <li class="portfolio__card">
-          <img src="./images/portfolio-1.jpg" width="360" alt="Banking App" />
-          <h3>Banking App</h3>
-          <p>App</p>
-        </li>
-
-        <li class="portfolio__card">
-          <img
-            src="./images/portfolio-2.jpg"
-            width="360"
-            alt="Cashless Payment"
-          />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li class="portfolio__card">
-          <img
-            src="./images/portfolio-3.jpg"
-            width="360"
-            alt="Meditation App"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-
-        <li class="portfolio__card">
-          <img src="./images/portfolio-4.jpg" width="360" alt="Taxi Service" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li class="portfolio__card">
-          <img
-            src="./images/portfolio-5.jpg"
-            width="360"
-            alt="Screen Illustrations"
-          />
-          <h3>Screen Illustrations</h3>
-          <p>Desing</p>
-        </li>
-
-        <li class="portfolio__card">
-          <img
-            src="./images/portfolio-6.jpg"
-            width="360"
-            alt="Online Courses"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-      </ul>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer__container">
-        <a href="#" class="logo footer-logo">
-          <span class="logo-web"> WEB</span>
-          <span class="logo-studio">STUDIO</span>
+      <div class="footer-container">
+        <a href="./index.html" class="logo-footer-logo">
+          >Web<span class="logo-part">Studio</span>
         </a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
       </div>
-      <a href="./index.html">WebStudio</a>
     </footer>
   </body>
 </html>
